fixed results text spacing issues.

--- a/scss/main.css
+++ b/scss/main.css
@@ -347,6 +347,11 @@ header {
   color: antiquewhite;
 }
 
+#humAndCpuSelBox {
+  position: relative;
+  bottom: -5vh;
+}
+
 #textAndButtons #yrSel, #textAndButtons #pDiv {
   font-size: 25px;
   color: #4c4843;
