--- a/scss/main2.css
+++ b/scss/main2.css
@@ -283,7 +283,7 @@ header {
           justify-content: center;
   font-size: 25px;
   color: antiquewhite;
-  width: 50%;
+  width: 40%;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 2rem;
@@ -360,6 +360,12 @@ header {
   font-family: font-family "Merienda", "Impact", "Georgia";
   color: antiquewhite;
 }
+
+#humAndCpuSelBox {
+  position: relative;
+  bottom: -5vh;
+}
+
 
 #textAndButtons #yrSel, #textAndButtons #pDiv {
   font-size: 25px;
