--- a/scss/main3.css
+++ b/scss/main3.css
@@ -301,7 +301,7 @@ header {
           justify-content: center;
   font-size: 25px;
   color: antiquewhite;
-  width: 50%;
+  width: 40%;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 2rem;
@@ -380,6 +380,11 @@ header {
   padding-top: 4rem;
   font-family: font-family "Merienda", "Impact", "Georgia";
   color: antiquewhite;
+}
+
+#humAndCpuSelBox {
+  position: relative;
+  bottom: -5vh;
 }
 
 #textAndButtons #yrSel, #textAndButtons #pDiv {
